# zauth

./: .dockerignore  .editorconfig  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  README.md  Rocket.toml  build.rs  diesel.toml  docker-compose.yml  flake.nix  package-lock.json  package.json  shell.nix
.github/: dependabot.yml
.github/workflows/: cargo-fmt.yml  cargo-test.yml  main.yml  release.yml  rust.yml
.hooks/: pre-commit
docker_misc/: pg_hba.conf
http_authentication/: Cargo.toml
http_authentication/src/: http_authentication.rs  lib.rs
keys/: replace_me.pem
migrations/2018-12-22-155112_create_user/: up.sql
migrations/2019-10-08-000056_create_client/: down.sql  up.sql
migrations/2019-10-30-155718_schema/: down.sql  up.sql
migrations/2020-08-21-201249_mailview/: down.sql  up.sql
migrations/2021-09-07-150714_add_session/: up.sql
migrations/2021-09-25-085355_add_email_confirmation/: down.sql  up.sql
migrations/2021-09-25-224437_change_registration_flow/: down.sql  up.sql
migrations/2022-04-19-195757_add_mm_username_to_user/: down.sql  up.sql
migrations/2022-12-22-204512_add_subscribed_to_mailinglist/: down.sql  up.sql
migrations/2022-12-22-205649_add_mails/: down.sql  up.sql
migrations/2022-12-23-143535_add_unsubscribe_token/: down.sql  up.sql
migrations/2022-12-31-142544_add_mail_author_field/: down.sql  up.sql
migrations/2023-10-26-0942_session_delete_cascade/: down.sql  up.sql
migrations/2025-01-23-180624_create_passkeys/: down.sql  up.sql
migrations/2025-07-01-174809_add_roles_table/: down.sql  up.sql
migrations/2025-08-06-201354_alter_user_client_session_to_nullable/: down.sql  up.sql
migrations/2025-08-06-220900_add_clients_roles/: down.sql  up.sql
migrations/2025-10-06-210914_drop_mail_author_fkey/: down.sql  up.sql
migrations/2025-10-31-111921-0000_add_content_type_field/: down.sql  up.sql
nix/: rust.nix  sources.json
oauth/: Cargo.toml
oauth/src/: lib.rs  oauth.rs
oauth/templates/: grant.html.hbs
openapi/reference/: zauth.v1.yaml
server/: Cargo.toml
server/src/: lib.rs  main.rs  oauth.rs  schema.rs  token_store.rs  util.rs
src/: config.rs  db_seed.rs  errors.rs  hooker.rs  http_authentication.rs  jwt.rs  lib.rs  mailer.rs  main.rs  models.rs  oauth.rs  schema.rs  token_store.rs  user.rs  util.rs  webauthn.rs
src/controllers/: announcements_controller.rs  clients_controller.rs  mailing_list_controller.rs  mod.rs  oauth_controller.rs  pages_controller.rs  roles_controller.rs  sessions_controller.rs  users_controller.rs  webauthn_controller.rs
src/ephemeral/: authorization_token.rs  cookieable.rs  csrf.rs  from_api.rs  mod.rs  session.rs
src/models/: client.rs  mail.rs  mod.rs  passkey.rs  role.rs  schema.rs  session.rs  user.rs
src/views/: accepter.rs  layout.html.tera  mod.rs  template.rs  view.rs
static/: login.css  style.css
static/js/: webauthn.js
static/scss/: application.scss
templates/: base_error.html  base_logged_in.html  base_not_logged_in.html  colored_circle.html  grant.html.hbs  home.html.tera  layout.html  login.html.hbs  login.html.tera  navbar.html
templates/announcements/: created.html
templates/clients/: confirm_generate_secret.html  edit_client.html  index.html  new_client.html
templates/errors/: 401.html  404.html  406.html  422.html  500.html  501.html
templates/maillist/: index.html  new_mail.html  show_mail.html
templates/mails/: confirm_user_registration.txt  mailinglist_mail.html  mailinglist_mail.txt  new_user_registration.txt  password_reset_success.txt  password_reset_token.txt  registration_webhook_failed.txt  user_approved.txt  user_rejected.txt
templates/oauth/: authorize.html  grant.html
templates/pages/: home.html
templates/passkeys/: index.html  new_passkey.html
templates/roles/: add_user.html  index.html  show_role.html
templates/session/: login.html  logout.html
templates/users/: confirm_email_form.html  confirm_email_invalid.html  confirm_email_success.html  confirm_unsubscribe_form.html  forgot_password.html  index.html  keys.html  new_user.html  register.html  registration_form.html  registration_success.html  reset_link_sent.html  reset_password_expired.html  show.html  (+5 more)
test_client/: client.py
tests/: clients.rs  mailinglist.rs  oauth.rs  passkeys.rs  roles.rs  sessions.rs  users.rs
zauth_derive/: Cargo.toml
zauth_derive/src/: lib.rs
zauth_record/: Cargo.toml
(+9 files in other folders)
