[package]
name = "zauth"
version = "1.3.0"
edition = "2018"
authors = ["Rien Maertens <rien.maertens@posteo.be>"]

[dependencies]
# askama = { version = "0.10", features = ["with-rocket", "mime", "mime_guess"] }
askama = { git = "https://github.com/djc/askama.git", rev = "8142963", features = ["with-rocket", "mime", "mime_guess"] }
# askama_rocket = "0.10"
askama_rocket = { git = "https://github.com/djc/askama.git", rev = "8142963" }
base64 = "0.13"
bincode = "1.0"
pwhash = "1.0"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.1"
lettre = { version = "0.10.0-rc.4", features = ["builder", "smtp-transport"] }
urlencoding = "2.1"
toml = "0.5"
rand = "0.8"
regex = "1.0"
reqwest = { version = "0.11", features = [ "json" ] }
rocket = { version = "0.5.0-rc.1", features = [ "json", "secrets" ] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
serde_urlencoded = "0.7"
diesel = { version = "1.4", features = ["postgres", "r2d2", "chrono"] }
diesel-derive-enum = { version = "1", features = ["postgres"] }
diesel_migrations = "1.4"
tempfile = "3.1"
maplit = "1.0"
parking_lot = { version = "0.12", features = ["nightly"] }
thiserror = "1.0"
threads_pool = "0.2"
validator = "0.14"
validator_derive = "0.14"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
features = ["diesel_postgres_pool"]
