[package]
name = "zauth"
version = "1.5.1"
edition = "2021"
authors = ["Rien Maertens <rien.maertens@posteo.be>"]

[dependencies]
# askama = { version = "0.11", features = ["with-rocket", "mime", "mime_guess"] }
askama = { git = "https://github.com/djc/askama.git", rev = "42d80ad", features = ["with-rocket", "mime", "mime_guess"] }
# askama_rocket = "0.11"
askama_rocket = { git = "https://github.com/djc/askama.git", rev = "42d80ad" }
base64 = "0.13"
bincode = "1.0"
pwhash = "1.0"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.1"
lettre = { version = "0.10", features = ["builder", "smtp-transport"] }
log = "0.4"
urlencoding = "2.1"
toml = "0.5"
rand = "0.8"
regex = "1.6"
reqwest = { version = "0.11", features = [ "json" ] }
rocket = { version = "0.5.0-rc.2", features = [ "json", "secrets" ] }
rocket_sync_db_pools = { version = "0.1.0-rc.2", features = [ "diesel_postgres_pool" ] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
serde_urlencoded = "0.7"
simple_logger = "2.2"
diesel = { version = "1.4", features = ["postgres", "r2d2", "chrono"] }
diesel-derive-enum = { version = "1", features = ["postgres"] }
diesel_migrations = "1.4"
tempfile = "3.1"
parking_lot = { version = "0.12" }
thiserror = "1.0"
validator = "0.15"
validator_derive = "0.16"
