[package]
name = "zauth"
version = "2.0.2"
edition = "2021"
authors = ["Rien Maertens <rien.maertens@posteo.be>"]

[dependencies]
askama = { git = "https://github.com/djc/askama.git", rev = "40bb338", features = ["with-rocket", "mime", "mime_guess"] }
askama_rocket = { git = "https://github.com/djc/askama.git", rev = "40bb338" }
base64 = "0.13"
bincode = "1.0"
pwhash = "1.0"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.1"
lettre = { version = "0.10", features = ["builder", "smtp-transport"] }
log = "0.4"
urlencoding = "2.1"
toml = "0.8"
rand = "0.8"
regex = "1.6"
rocket = { version = "0.5.0-rc.3", features = [ "json", "secrets" ] }
rocket_sync_db_pools = { version = "0.1.0-rc.3", features = [ "diesel_postgres_pool" ] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
serde_urlencoded = "0.7"
simple_logger = "4.0"
diesel = { version = "2.1", features = ["postgres", "r2d2", "chrono"] }
diesel-derive-enum = { version = "2.1", features = ["postgres"] }
diesel_migrations = "2.1"
tempfile = "3.1"
parking_lot = { version = "0.12" }
thiserror = "1.0"
validator = { version = "0.16", features = [ "derive" ] }
jsonwebtoken = "9.1"
openssl = "0.10"

[build-dependencies]
openssl = "0.10"
